# game-1

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  debug.sh  release.sh  run.sh
res/shaders/: axisShader.vert  cubeShader.frag  cubeShader.vert  editorTileShader.frag  editorTileShader.vert  selectedTileShader.frag  selectedTileShader.vert  shader.frag  shader.vert  tileShader.frag
src/: camera.cpp  camera.h  cube.h  levelEditor.cpp  levelEditor.h  logger.h  main.cpp  mesh.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h  vao.cpp  vao.h
